--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 body {
   background: var(--primery-bg-color);
   color: var(--primery-text-color);
+  font-family: roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 ul {
@@ -18,10 +20,16 @@ ul {
 a {
   text-decoration: none;
 }
+
+
 /* site-nav */
 
 .logo {
   color: var(--title-text-color);
+  font-family: Raleway, sans-serif;
+  font-weight: bold;
+font-size: 26px;
+line-height: 1.2;
 }
 
 .logo:hover {
@@ -38,6 +46,11 @@ a {
 
 .site-nav-link a {
   color: var(--title-text-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .site-nav-link a:hover,
@@ -47,6 +60,10 @@ a {
 
 .contatcs a {
   color: var(--primery-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;  
 }
 
 .contatcs a:hover,
@@ -57,14 +74,33 @@ a {
 
 .hero-title {
   color: #f5f4fa;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;  
+}
+
+.hero-link { 
+  color: #ffffff; 
+  background: var(--accent-color);
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 
 /* section */
 .section-title {
   color: var(--title-text-color);
+  font-weight: bold;
 }
 .section-items {
   color: #f5f4fa;
+}
+.section .title {
+  color: var(--title-text-color);
+  font-weight: bold;
 }
 /* team-section */
 
@@ -73,10 +109,12 @@ a {
 }
 .team-section .title {
   color: var(--title-text-color);
+  font-weight: bold;
 }
 
 .clients-section .title {
   color: var(--title-text-color);
+  font-weight: bold;
 }
 
 /* footer */
@@ -117,6 +155,11 @@ footer {
     background var(--add-bg-color);
 }
 .radio-button:hover {
+    background: var(--accent-color);
+    color: var(--primery-bg-color);
+}
+
+.radio-button:focus {
     background: var(--accent-color);
     color: var(--primery-bg-color);
 }
